--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -1858,7 +1858,7 @@
     <value>Visitas</value>
   </data>
   <data name="StringConstants_VentaVehiculo" xml:space="preserve">
-    <value>Vehicle Selling</value>
+    <value>Venta Vehiculo</value>
   </data>
   <data name="StringConstants_Vendedor" xml:space="preserve">
     <value>Vendedor</value>
