--- a/src/KarveLocale/Properties/Resources.en-GB.resx
+++ b/src/KarveLocale/Properties/Resources.en-GB.resx
@@ -2110,4 +2110,7 @@
   <data name="VehicleTypes_TipoDeVehiculos" xml:space="preserve">
     <value>Vehicles Type</value>
   </data>
+  <data name="lrisk" xml:space="preserve">
+    <value>Risk</value>
+  </data>
 </root>
