--- a/src/KarveLocale/Properties/Resources.de-DE.resx
+++ b/src/KarveLocale/Properties/Resources.de-DE.resx
@@ -2488,4 +2488,10 @@
   <data name="ltipoCliente" xml:space="preserve">
     <value>Art des Kunden</value>
   </data>
+  <data name="DrivingLicense" xml:space="preserve">
+    <value>Führerschein</value>
+  </data>
+  <data name="NationalId" xml:space="preserve">
+    <value>Ausweisdokument</value>
+  </data>
 </root>
