--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -2127,4 +2127,10 @@
   <data name="ltipoCliente" xml:space="preserve">
     <value>Tipo Cliente</value>
   </data>
+  <data name="DrivingLicense" xml:space="preserve">
+    <value>Permiso</value>
+  </data>
+  <data name="NationalId" xml:space="preserve">
+    <value>Documento de Identidad</value>
+  </data>
 </root>
