1. Added new data area component. 2. Modified the DualSearchBox for refreshing at boot. 3. Added further mapping.

--- a/src/KarveLocale/Properties/Resources.de-DE.resx
+++ b/src/KarveLocale/Properties/Resources.de-DE.resx
@@ -2494,4 +2494,13 @@
   <data name="NationalId" xml:space="preserve">
     <value>Ausweisdokument</value>
   </data>
+  <data name="ListaConductores" xml:space="preserve">
+    <value>Fahrerliste</value>
+  </data>
+  <data name="ListaDeContactos" xml:space="preserve">
+    <value>Liste Kontact</value>
+  </data>
+  <data name="EnterSearchTerm" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
