--- a/src/KarveLocale/Properties/Resources.en-US.resx
+++ b/src/KarveLocale/Properties/Resources.en-US.resx
@@ -2134,4 +2134,13 @@
   <data name="NationalId" xml:space="preserve">
     <value>Identification Document</value>
   </data>
+  <data name="ListaConductores" xml:space="preserve">
+    <value>Drivers List</value>
+  </data>
+  <data name="ListaDeContactos" xml:space="preserve">
+    <value>Contact List</value>
+  </data>
+  <data name="EnterSearchTerm" xml:space="preserve">
+    <value>Search</value>
+  </data>
 </root>
