--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -2142,4 +2142,7 @@
   <data name="EnterSearchTerm" xml:space="preserve">
     <value>Search</value>
   </data>
+  <data name="lzone" xml:space="preserve">
+    <value>Zona</value>
+  </data>
 </root>
