--- a/src/KarveLocale/Properties/Resources.es-ES.resx
+++ b/src/KarveLocale/Properties/Resources.es-ES.resx
@@ -2145,4 +2145,7 @@
   <data name="lzone" xml:space="preserve">
     <value>Zona</value>
   </data>
+  <data name="OfficeDtos_CodigoOficina" xml:space="preserve">
+    <value>Codigo Oficina</value>
+  </data>
 </root>
