--- a/src/KarveLocale/Properties/Resources.it-IT.resx
+++ b/src/KarveLocale/Properties/Resources.it-IT.resx
@@ -2507,4 +2507,7 @@
   <data name="lzone" xml:space="preserve">
     <value>Zona</value>
   </data>
+  <data name="OfficeDtos_CodigoOficina" xml:space="preserve">
+    <value>Codigo Officina</value>
+  </data>
 </root>
