--- a/src/KarveLocale/Properties/Resources.en-US.resx
+++ b/src/KarveLocale/Properties/Resources.en-US.resx
@@ -2146,4 +2146,7 @@
   <data name="lzone" xml:space="preserve">
     <value>Zone</value>
   </data>
+  <data name="OfficeDtos_CodigoOficina" xml:space="preserve">
+    <value>Office Code</value>
+  </data>
 </root>
