- Add integreation test - Added icon.

--- a/src/KarveLocale/Properties/Resources.de-DE.resx
+++ b/src/KarveLocale/Properties/Resources.de-DE.resx
@@ -2596,4 +2596,7 @@
   <data name="lselectItem" xml:space="preserve">
     <value>Wählen Sie</value>
   </data>
+  <data name="Elenco" xml:space="preserve">
+    <value>List</value>
+  </data>
 </root>
