--- a/src/KarveLocale/Properties/Resources.en-GB.resx
+++ b/src/KarveLocale/Properties/Resources.en-GB.resx
@@ -2230,4 +2230,7 @@
   <data name="lselectItem" xml:space="preserve">
     <value>Select Item</value>
   </data>
+  <data name="Elenco" xml:space="preserve">
+    <value>List</value>
+  </data>
 </root>
