--- a/src/KarveLocale/Properties/Resources.resx
+++ b/src/KarveLocale/Properties/Resources.resx
@@ -2685,4 +2685,7 @@
   <data name="lselectItem" xml:space="preserve">
     <value>Seleccione </value>
   </data>
+  <data name="Elenco" xml:space="preserve">
+    <value>Listado</value>
+  </data>
 </root>
